k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: studentapp-ingress
  labels:
    app: studentapp
spec:
  ingressClassName: nginx
  rules:
  - host: af049ffa178f7428aa19c4548441ee9f-1118725864.ap-southeast-1.elb.amazonaws.com
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: studentapp-svc
            port: 
              number: 8080

      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: studentapp-frontend-svc
            port: 
              number: 80
